--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "cosecha.github.io",
+  "name": "Harp-Bootstrap-Starter",
   "version": "1.0.0",
-  "description": "[![Join the chat at https://gitter.im/Cosecha/cosecha.github.io](https://badges.gitter.im/Cosecha/cosecha.github.io.svg)](https://gitter.im/Cosecha/cosecha.github.io?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge)",
+  "description": "A rapid prototyping tool using Harp.js and Twitter Bootstrap",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Cosecha/cosecha.github.io.git"
+    "url": "https://github.com/PochoLabs/Harp-Bootstrap-Starter"
   },
   "keywords": [
     "static",
     "site",
     "harp.js"
   ],
-  "author": "Celso Mireles <celso.mireles@gmail.com>",
+  "author": "Celso Mireles <celso@pocholabs.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Cosecha/cosecha.github.io/issues"
+    "url": "https://github.com/PochoLabs/Harp-Bootstrap-Starter/issues"
   },
-  "homepage": "https://github.com/Cosecha/cosecha.github.io#readme",
+  "homepage": "https://github.com/PochoLabs/Harp-Bootstrap-Starter#readme",
 	"devDependencies": {
     "browser-sync": "^2.13.0",
     "del": "^2.2.1",
