--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "Harp-Bootstrap-Starter",
   "version": "1.0.0",
   "description": "A rapid prototyping tool using Harp.js and Twitter Bootstrap",
-  "main": "index.js",
+  "main": "gulpfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node_modules/.bin/gulp"
   },
   "repository": {
     "type": "git",
