--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node_modules/.bin/gulp"
+    "start": "node_modules/.bin/gulp",
+    "build": "node_modules/.bin/gulp compile"
   },
   "repository": {
     "type": "git",
